bugfix - some names not showing

--- a/src/app/components/page-esports-event/app.esports-event.component.css
+++ b/src/app/components/page-esports-event/app.esports-event.component.css
@@ -84,11 +84,13 @@ b {
   width: 80%;
   text-align: center;
 
-  font-size: 2.5vw;
   line-height: 2.63;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   color: rgb(90, 87, 255);
   background-color: #B1BAFC;
+
+  font-size: 3vw;
+  display: block;
 }
 
 #esports-event .banner-image {
@@ -117,7 +119,7 @@ b {
 #esports-event .teams-container .team {
   position: relative;
   text-align: center;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
   line-height: 1.25;
 
   width: 100%;
@@ -131,16 +133,16 @@ b {
   height: auto;
   float: left;
 
-  position: absolute;
-  top:0;
-  left:0;
+  margin-top: 0;
+  margin-left: 0;
+  display: block;
 }
 
-#esports-event .teams-container .team-name {
-  font-size: 3vw;
-}
 #esports-event .teams-container .team-member {
-  font-size: 1.8vw;
+  width: 100%;
+  height: auto;
+  font-size: 1.65vw;
+  display: inline-block;
 }
 
 .line {
@@ -213,7 +215,7 @@ b {
     font-size: 7vw;
   }
   #esports-event .teams-container .team-member {
-    font-size: 4vw;
+    font-size: 3.7vw;
   }
   #esports-event h1 {
     font-size: 6.5vw;
